--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <title>Simple JS App</title>
-  </head>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="32x32" />
+	<title>Simple JS App</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
   <body>
-
+    <header class="page-header">
+		<h2 class="page-header__item">Keith Thompson</h2>
+			<nav class="main-navigation page-header__item">
+				<div class="container borderXwidth">
+					<ul role="menubar" class="navigation-list">
+						<li><a href="index.html" class="nav-item">HOME</a>
+							</li>
+						<li><a href="about.html" class="nav-item">ABOUT</a>
+							</li>
+						<li><a href="contact.html" class="nav-item">CONTACT</a>
+						</li>
+						<li><a href="work.html" class="nav-item">PORTFOLIO</a>
+						</li>
+					 </ul>
+				</div>
+			</nav>
+	</header>
 
 
         <script src="js/scripts.js"></script>
