--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 				</div>
 			</nav>
 	</header>
-
+	<div class="profile">
 	<ul class="pokemon-list"></ul>
-
-
+	</div>
+		<script src="js/promise-polyfill.js"></script>
+		<script src="js/fetch.umd.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
