--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 			</nav>
 	</header>
 	<div class="profile">
-	<ul class="pokemon-list"></ul>
+	<ul class="pokemon-list">
+		<button id='show-modal'>Show modal</button>
+		<div id='modal-container'></div></ul>
 	</div>
 		<script src="js/promise-polyfill.js"></script>
 		<script src="js/fetch.umd.js"></script>
