css, js updates

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			</nav>
 	</header>
 	<div class="profile">
+		<div id="modal-container"></div>
 	<ul class="pokemon-list"></ul>
 	</div>
 		<script src="js/promise-polyfill.js"></script>
