--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div id="modal-container"></div>
 	<ul class="pokemon-list"></ul>
 	</div>
-		<script src="jquery-3.5.1.min.js"></script>
+		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/promise-polyfill.js"></script>
 		<script src="js/fetch.umd.js"></script>
         <script src="js/scripts.js"></script>
