--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
   <body>
     <header class="page-header">
@@ -31,7 +32,6 @@
 		<div id="modal-container"></div>
 	<ul class="pokemon-list"></ul>
 	</div>
-		<script src="js/jquery-3.5.1.min.js"></script>
 		<script src="js/promise-polyfill.js"></script>
 		<script src="js/fetch.umd.js"></script>
         <script src="js/scripts.js"></script>
