--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="32x32" />
+	<script
+	src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
 	<title>Simple JS App</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet"> 
@@ -31,7 +34,7 @@
 		<div id="modal-container"></div>
 	<ul class="pokemon-list"></ul>
 	</div>
-		<script src="js/jquery-3.5.1.min.js"></script>
+	
 		<script src="js/promise-polyfill.js"></script>
 		<script src="js/fetch.umd.js"></script>
         <script src="js/scripts.js"></script>
