--- a/index.html
+++ b/index.html
@@ -12,27 +12,42 @@
 	<title>Simple JS App</title>
 </head>
   <body>
-    <header class="page-header">
-		<h2 class="page-header__item">Keith Thompson</h2>
-			<nav class="main-navigation page-header__item">
-				<div class="container borderXwidth">
-					<ul role="menubar" class="navigation-list">
-						<li><a href="index.html" class="nav-item">HOME</a>
-							</li>
-						<li><a href="about.html" class="nav-item">ABOUT</a>
-							</li>
-						<li><a href="contact.html" class="nav-item">CONTACT</a>
-						</li>
-						<li><a href="work.html" class="nav-item">PORTFOLIO</a>
-						</li>
-					 </ul>
-				</div>
-			</nav>
-	</header>
+
 	<div class="profile">
-		<div id="modal-container"></div>
+		<div id="modal-container">
+			<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-container">
+	Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+		  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<span aria-hidden="true">&times;</span>
+		  </button>
+		</div>
+		<div class="modal-body">
+		  ...
+		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		</div>
+	  </div>
+	</div>
+  </div>
+		</div>
 			<ul class="pokemon-list"></ul>
 	</div>
+
+
+
+
+
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   		<script src="js/promise-polyfill.js"></script>
